Version: 1.9.5
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Support for PC Xbox Game Pass.
* Fixed a crash at launch (Could not load type 'MonoMod.Utils.Extensions' from assembly 0Harmony) when the installed dotnet is not .NET Framework 4.7.2+.
* API: Fixed the usage of [spawnPlace] and [deathPlace] in the SpawnMessage displaying the wrong location after the first spawn.
---------------------------------------------------------------------------------------------------
Version: 1.9.4
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Updated to support Bannerlord v1.1.0
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Game Versions: v1.0.0,v1.0.1
* Fixed the wrong dialogue being displayed when the player is being thanked by a lord which has not been met after defeating a common enemy.
* Fixed a "NullPointerException" crash when Custom Spawns is paired with other mods adding new troops.
---------------------------------------------------------------------------------------------------
Version: 1.9.2
Game Versions: v1.0.0,v1.0.1
* Fixed a crash when a party is destroyed.
---------------------------------------------------------------------------------------------------
Version: 1.9.1
Game Versions: v1.0.0,v1.0.1
* Fixed the wrong dialogues being displayed when the player frees a prisoner from a defeated custom party.
* Fixed the wrong dialogues being displayed when the player captures a lord after defeating its party.
* Fixed the wrong dialogues being displayed when the player is being thanked by a lord after defeating a common enemy.
* Fixed a crash when the player tries to bargain a safe free passage with a custom party.
* Fixed a crash when encountering vanilla bandits when a sub-mod does have any custom dialogues.
* Added a cheat named "campaign.spawn" which spawns a party described in the "CustomDailySpawn.xml" file. This will help modders to test their spawns.