@@ -24,7 +24,7 @@ We created an XML-based API to replicate the Bannerlord modding process. Here is
 
 The API ModuleData folder houses all the config files (config.xml, custom_spawns_campaign_data_config.xml, and prisoner_recruitment_config.xml). The config.xml folder pertains to the mod in general, custom_spawns_campaign_data_config.xml pertains to specific campaign behaviours such as Devestation, and prisoner_recruitment_config.xml pertains to lords and garrisons automatically recruiting their own prisoners. All mods that use custom spawns share the same config file, and players changing values inside these config files affect all the mods.
 
-Your ModuleData folder will hold content that Bannerlord code parses through, such as the Lords, Factions, etc. These are the files that you will have to link through your **SubModule.xml** file. Of specific interest to us is the XML file that you will create to specify Troop/Party Templates. This is done no different than how the game does it, so feel free to look at TaleWorld's implementation inside the Sandbox Module (look inside ModuleData/partyTemplates.xml). **It is convention for CustomSpawns mods to name their troop templates' ids starting with "cs_". These party templates can be referenced back to CustomSpawns for your troop templates to spawn on the map (more on that later). YOU HAVE TO DO THIS if you want certain features to work.** Also, it's cleaner, and prevents the API from messing with party templates that are vanilla or added through non-custom spawns mods.
+Your ModuleData folder will hold content that Bannerlord code parses through, such as the Lords, Factions, etc. These are the files that you will have to link through your **SubModule.xml** file. Of specific interest to us is the XML file that you will create to specify Troop/Party Templates. This is done no different than how the game does it, so feel free to look at TaleWorld's implementation inside the Sandbox Module (look inside ModuleData/partyTemplates.xml).
 
 The CustomSpawns folder must be placed directly under your Module folder. Currently, it contains the CustomDailySpawn.xml, CustomSpawnsSubMod.xml, Diplomacy.xml, CustomDialogue.xml, and NameSignifiers.xml files. 
 
